--- a/scss/_lib.scss
+++ b/scss/_lib.scss
@@ -1,6 +1,6 @@
 $fcGray: #707070;
 $bgcPink: #A193861F;
-$bgcGray: #A1938689;
+$bgcGray: #D0C5BA;
 
 html {
   font-size: 62.5%;
@@ -9,4 +9,28 @@ html {
 body {
   font-size: 1.6rem;
   // line-height: 1.9rem;
+}
+
+.wrap {
+  padding-top: 260px;
+  padding-bottom: 70px;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 1.8rem;
+  line-height: 24px;
+  letter-spacing: 5.4px;
+  color: $fcGray;
+  display: flex;
+  align-items: center;
+
+
+  &::after {
+    display: inline-block;
+    content: '';
+    border-top: 1px solid $fcGray;
+    width: 4em;
+    margin-left: 22px;
+  }
 }
