--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,29 @@ body {
   font-size: 1.6rem;
 }
 
+.wrap {
+  padding-top: 260px;
+  padding-bottom: 70px;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 1.8rem;
+  line-height: 24px;
+  letter-spacing: 5.4px;
+  color: #707070;
+  display: flex;
+  align-items: center;
+}
+
+.title::after {
+  display: inline-block;
+  content: '';
+  border-top: 1px solid #707070;
+  width: 4em;
+  margin-left: 22px;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -185,5 +208,40 @@ header {
   font-family: Zapfino, Regular;
   font-size: 3.8rem;
   line-height: 128px;
+}
+
+#concept {
+  background: linear-gradient(#A193861F 0% 50%, #D0C5BA 50% 100%);
+}
+
+.concept-wrap {
+  width: 85%;
+}
+
+.concept-img {
+  display: flex;
+  justify-content: space-around;
+}
+
+.concept-intro {
+  color: #ffffff;
+  text-align: center;
+  display: flex;
+  margin-top: 70px;
+}
+
+.concept-intro__title {
+  font-size: 4.0rem;
+  width: 45%;
+  line-height: 68px;
+  letter-spacing: 16px;
+  font-family: ヒラギノ明朝 Pro, W3;
+}
+
+.concept-intro__desc {
+  width: 50%;
+  line-height: 27px;
+  letter-spacing: 1.6px;
+  font-family: ヒラギノ角ゴ Pro, W3;
 }
 /*# sourceMappingURL=main.css.map */
