--- a/css/main.css
+++ b/css/main.css
@@ -244,4 +244,37 @@ header {
   letter-spacing: 1.6px;
   font-family: ヒラギノ角ゴ Pro, W3;
 }
+
+.menu-wrap {
+  width: 85%;
+}
+
+.menu-item-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-item {
+  width: 274px;
+}
+
+.menu-content__title {
+  font-size: 3.0rem;
+  line-height: 36px;
+  margin-top: 37px;
+  text-align: center;
+}
+
+.menu-content__desc {
+  width: 250px;
+  font-size: 1.6rem;
+  line-height: 19px;
+  margin: 34px auto 0;
+}
+
+.menu-content__price {
+  text-align: right;
+  margin-top: 34px;
+}
 /*# sourceMappingURL=main.css.map */
