--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 header {
   display: flex;
   align-items: center;
-  width: 718px;
+  width: 800px;
   position: absolute;
   padding: 68px 0 0 78px;
   z-index: 10;
@@ -9,18 +9,18 @@ header {
 
 .hd-logo {
   font-size: 3.8rem;
+  letter-spacing: 3.8px;
   font-family: Roboto Mono for Powerline, Regular;
 }
 
 .nav {
-
   ul {
     display: flex;
   }
   
-
   li {
     font-size: 1.6rem;
+    letter-spacing: 1.8px;
     margin-left: 20px;
     color: $fcGray;
     cursor: pointer;
