--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,15 +5,33 @@ header {
   position: absolute;
   padding: 68px 0 0 78px;
   z-index: 10;
+
+  @include tab {
+    position: static;
+    background-color: #fff;
+    width: 100%;
+    padding: 24px 20px;
+    justify-content: space-between;
+  }
 }
 
 .hd-logo {
   font-size: 3.8rem;
   letter-spacing: 3.8px;
   font-family: Roboto Mono for Powerline, Regular;
+
+  @include tab {
+    font-size: 2.2rem;
+    letter-spacing: 2.2px;
+  }
 }
 
 .nav {
+
+  @include tab {
+    display: none;
+  }
+
   ul {
     display: flex;
   }
@@ -28,6 +46,27 @@ header {
     &:hover {
       color: black;
       border-bottom: 1px solid;
+    }
+  }
+}
+
+.ham {
+  display: none;
+  @include tab {
+    width: 16px;
+    height: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    span {
+      display: inline-block;
+      width: 100%;
+      height: 2px;
+      background-color: #3B4043;
+
+      &:last-child {
+        width: 50%;
+      }
     }
   }
 }
