--- a/scss/_lib.scss
+++ b/scss/_lib.scss
@@ -2,6 +2,23 @@ $fcGray: #707070;
 $bgcPink: #A193861F;
 $bgcGray: #D0C5BA;
 
+@mixin pc {
+  @media screen and (min-width: 960px) {
+    @content;
+  }
+}
+@mixin tab {
+  @media screen and (max-width: 959px) {
+    @content;
+  }
+}
+@mixin sp {
+  @media screen and (max-width: 600px) {
+    @content;
+  }
+}
+
+
 html {
   font-size: 62.5%;
 }
@@ -15,7 +32,11 @@ body {
   padding-top: 260px;
   padding-bottom: 70px;
   margin: 0 auto;
-  // width: 85%;
+  
+  @include tab {
+    padding-top: 60px;
+    padding-bottom: 76px;
+  }
 }
 
 .title {
@@ -33,5 +54,9 @@ body {
     border-top: 1px solid $fcGray;
     width: 4em;
     margin-left: 22px;
+
+    @include tab {
+      width: 2em;
+    }
   }
 }
