--- a/scss/_first-view.scss
+++ b/scss/_first-view.scss
@@ -1,6 +1,12 @@
 #first-view {
   height: 800px;
   display: flex;
+
+  @include tab {
+    position: relative;
+    display: block;
+    height: 597px;
+  }
 }
 
 .fv-box {
@@ -10,6 +16,14 @@
     width: 48%;
     background-color: #fff;
     position: relative;
+
+    @include tab {
+      color: #FFFFFF;
+      position: absolute;
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0);
+      z-index: 1;
+    }
   }
 
   &__img {
@@ -17,25 +31,48 @@
     width: 52%;
     background-image: url(../img/blond-woman.png);
     background-size: cover;
+
+    @include tab {
+      width: 100%;
+      position: absolute;
+    }
   }
 }
 
 .fv-title {
+  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 
-  &__1 {
+  @include tab {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  &__ja {
     font-family: ヒラギノ明朝 Pro, W3;
     font-size: 3.8rem;
     line-height: 65px;
     white-space: nowrap;
+
+    @include tab {
+      font-size: 2.3rem;
+      line-height: 40px;
+    }
   }
 
-  &__2 {
+  &__en {
     font-family: Zapfino, Regular;
     font-size: 3.8rem;
     line-height: 128px;
+    white-space: nowrap;
+
+    @include tab {
+      font-size: 2.8rem;
+      line-height: 95px;
+      letter-spacing: 2.8px;
+    }
   }
 }
