--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,15 +2,23 @@ footer {
   height: 342px;
   position: relative;
 
+  @include sp {
+    height: 260px;
+  }
+
   &::before {
     content: '';
-    display: block;
+    display: inline-block;
     position: absolute; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 85%;
     border: 1px solid #70707036;
+
+    @include sp {
+      top: 25%;
+    }
   }
 }
 
@@ -24,14 +32,31 @@ footer {
   left: 50%;
   transform: translateX(-50%);
 
+  @include sp {
+    flex-direction: column-reverse;
+    top: 48%;
+  }
 }
 
 .footer-logo {
+  @include sp {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 60px;
+  }
+
   &__text {
     color: #7070704D;
     font-size: 3.2rem;
     line-height: 32px;
     margin-right: 26px;
+
+    @include sp {
+      font-size: 1.8rem;
+      line-height: 22px;
+
+    }
   }
 
   &__icon {
@@ -49,4 +74,8 @@ footer {
   border: 1px solid $fcGray;
   padding: 10px 40px;
   box-sizing: border-box;
+
+  @include sp {
+    padding: 12px 40px;
+  }
 }
