--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,37 +1,68 @@
 .menu-wrap {
   width: 85%;
+
+  @include tab {
+    width: 90%;
+  }
 }
 
 .menu-item-wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include tab {
+    flex-direction: column;
+    margin-top: 50px;
+  }
 }
 
 .menu-item {
   width: 274px;
 
+  &__img {
+    width: 100%;
+  }
+
+  
+  @include tab {
+    &:not(:first-child) {
+      margin-top: 62px;
+    }
+  }
+
 }
 
 .menu-content {
-  
-
   &__title {
     font-size: 3.0rem;
     line-height: 36px;
     margin-top: 37px;
     text-align: center;
+
+    @include tab {
+      margin-top: 30px;
+      text-align: left;
+    }
   }
 
   &__desc {
     width: 250px;
-    font-size: 1.6rem;
     line-height: 19px;
     margin: 34px auto 0;
+
+    @include tab {
+      margin: 30px 0;
+      width: 100%;
+    }
   }
 
   &__price {
     text-align: right;
     margin-top: 34px;
+
+    @include tab {
+      margin-top: 30px;
+    }
   }
 }
